roles/Addons/templates/jenkins/1.Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
