roles/Addons/templates/jenkins/4.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: devops
  labels:
    k8s-app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: jenkins
  template:
    metadata:
      labels:
        k8s-app: jenkins
    spec:
      containers:
        - name: jenkins
          image: daocloud.io/buxiaomo/jenkins:2.150.1
          ports:
            - containerPort: 8080
          # resources:
          #   limits:
          #     cpu: "0.1"
          #     memory: 100Mi
          #   requests:
          #     cpu: "0.1"
          #     memory: 100Mi
          volumeMounts:
            - name: jenkins
              mountPath: /var/jenkins
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: jenkins
          persistentVolumeClaim:
            claimName: jenkins
