roles/Addons/templates/jenkins/5.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: devops
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jenkins.kubernetes.local
spec:
  selector:
    k8s-app: jenkins
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
