roles/Addons/templates/jenkins/7.Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: devops
spec:
  rules:
  - host: jenkins.kubernetes.local
    http:
      paths:
        - path: /
          backend:
            serviceName: jenkins
            servicePort: 8080
